--- a/Staffmembers.html
+++ b/Staffmembers.html
@@ -26,13 +26,13 @@
 <header><h1>Donate Blood</h1></header>
 <nav>
 			<ul>
-			<li><a href=" ">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href=" ">Place</a></li>
 			<li><a href=" ">Voluntary</a></li>
 			<li><a href=" ">Donate</a></li>
-            <li><a href=" ">Blood Types</a></li>
+            <li><a href="blood.html ">Blood Types</a></li>
 			<li><a href=" ">About</a></li>
-            <li><a href=" ">Staff Members</a></li>
+            <li><a href="staffmembers.html ">Doctors</a></li>
 			<li><a href=" ">Contact</a></li>
 			</ul>
 		
