--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 <header><h1>Donate Blood</h1></header>
 <nav>
 			<ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Eligibility</a></li>
-                <li><a href="#">Voluntary</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="aboutus.html">About</a></li>
-                <li><a href="contactus.html">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href=" ">Place</a></li>
+			<li><a href=" ">Voluntary</a></li>
+			<li><a href=" ">Donate</a></li>
+            <li><a href="blood.html">Blood Types</a></li>
+			<li><a href=" ">About</a></li>
+            <li><a href="Staffmembers.html">Doctors</a></li>
+			<li><a href=" ">Contact</a></li>
 			</ul>
 		
 </nav>
