--- a/voluntary.html
+++ b/voluntary.html
@@ -20,7 +20,7 @@
 <nav>
 			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Eligibility</a></li>
+			<li><a href="#">Eligibility</a></li>x
 			<li><a href="voluntary.html">Voluntary</a></li>
 			<li><a href="#">Donate</a></li>
 			<li><a href="aboutus.html">About</a></li>
@@ -32,66 +32,38 @@
 <section id="col1">
 <img src="volimage.jpg"  alt="Donate blood"> 
 
+
 <html>
 <head>
-<title>Volunteer Registration</title>
-<script>
-	function checkRePassword(document) {	
-	  var pwd = document.getElementById("password");
-  	  var pwd_msg = document.getElementById('pwd_msg');
-	  var repwd = document.getElementById("rePassword");	  
-	  if (pwd.value != repwd.value) {
-		pwd_msg.innerHTML = "The two passwords are not the same. Please re-enter both now";
-		repwd.value = "";
-		pwd.focus();
-		return false;
-	  }
-	  else {
-		pwd_msg.innerHTML = "";  
-	  }  
-	  return true;
-	}	
-
-	function validateInfo(document) { 
-	  if (checkRePassword(document))
-	  { 
-		return true;
-	  }
-	  return false;
-	}	
-</script>
 </head>
 <body>
 <h1>Please enter your profile </h1>
 <p><i>Fields marked with an asterisk (*) must be entered.</i></p>
-<form action="registration_process.php" method="post">
+<form action="voluntary.php" method="post">
  <table border="0">
-	<tr>
+	
+   	<tr>
     	<td align="right">* First Name:</td>
-    	<td><input type="text" id="name" name="name" required></td>
+    	<td><input type="text" id="first_name" name="first_name" required></td>
 	</tr>
 	<tr>
     	<td align="right">* Last Name:</td>
-    	<td><input type="text" id="last name" name="last name" required></td>
+    	<td><input type="text" id="last_name" name="last_name" required></td>
 	</tr>
 	<tr>
     	<td align="right">* Contact No.:</td>
-    	<td><input type="text" id="contact No." name="contact No." required></td>
+    	<td><input type="text" id="contact_no" name="contact_no" required></td>
 	</tr>
-	
 	<tr>
-    	<td align="right">* Email:</td>
+    	<td align="right"> Email:</td>
     	<td><input type="email" name="email" id="email" required></td>
 	</tr>
 	<tr>
     	<td align="right">* Age:</td>
     	<td><input type="age" id="age" name="age" required></td>
-        <td id="pwd_msg" style="color:red;"></td>
+       
 	</tr>
-	<tr>
-    	<td align="right">* Gender:</td>
-    	<td><input type="Gender" id="gender" name="gender" required></td>
-	</tr>
+
 	<tr>
     	<td align="right"><input type="submit" name="submit" value="Submit" onClick="return validateInfo(document)"></td>
     	<td><input type="reset" name="reset" value="Clear"></td>
@@ -100,9 +72,9 @@
 </form>
 </body>
 </html>
+</section>
 <footer><h3>Blood donation is our human duty</h3>
 </footer>
-
 </div>
 
 </body>
